# mini-cd

./: pyproject.toml  server.py
